# django-runtimeconf

./: interface.py  pyproject.toml  tests.py
src/django_redis_runtimeconf/: admin.py  apps.py  forms.py  interface.py  middlewares.py
src/django_redis_runtimeconf/templates/: runtimeconf.html
