[tool.poetry]
name = "django-redis-runtimeconf"
version = "0.1.4"
description = ""
authors = ["Kirill Skvoter <r00t@skvoter.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
redis = "^3.5.3"
djangorestframework = "^3.10"
fakeredis = "^1.4.3"
django = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
